corrected alignment of home page enter button

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -10,6 +10,7 @@
   border-left: none;
   position: relative;
   padding: 20px;
+  max-width: 1350px;
 }
 
 /*.enter-button {
